tests/dupe-var-val/out.txt
error: redefined identifier: x
  ┌─ err.sml:1:9
  │
1 │ val (x, x) = (1, 2)
  │         ^

typechecking failed
